tests/errors/unclosed_brace.vhpt
--TEST--
Unclosed brace error
--FILE--
<?php
if (true) {
    echo "hello";
--EXPECT_ERROR--
Expected
